--- a/.github/workflows/devops.yml
+++ b/.github/workflows/devops.yml
@@ -44,7 +44,7 @@ jobs:
           make lint
       - name: Test with pytest
         run: |
-          #make test
+          make test
       - name: Format code
         run: |
           #make format
