--- a/.github/workflows/devops.yml
+++ b/.github/workflows/devops.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Install dependencies
         run: |
           make install
-          #python -m textblob.download_corpora
+          python -m textblob.download_corpora
       - name: Lint with pylint
         run: |
           make lint
@@ -50,4 +50,4 @@ jobs:
           make format
       - name: Build Container
         run: |
-          #make build
+          make build
